# xmproxy-webapp

./: CMakeLists.txt  PLAN.md  manifest.template.json
etc/: config.json.default
share/www/: index.html
share/www/css/: style.css
share/www/js/: app.js
src/: config.py  config_manager.py  server.py  xmproxy_client.py
